compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__logic_const_ops-6.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: false or true

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..24, state: Value(Bool(true)) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Bool(true)

