compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__logic_const_ops-7.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: true or false

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..24 }, state: Value(Bool(true)) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(4))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Bool(true)


