compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__logic_const_ops-8.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: true or true

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..23 }, state: Value(Bool(true)) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Bool(true)


