compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__logic_const_ops.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: false and false

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_state: [
                Value(Bool(false)),
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
