compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__real_promotion-13.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 < 1.0

---
"_"@(FileId(1), 6..7) -> Bool(false)


