compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__real_promotion-3.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 + 1.0

---
"_"@(FileId(1), 6..7) -> Real(2.0)


