compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__real_promotion-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 - 1

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..18 }, state: Value(Real(0.0)) },
    ],
    var_to_expr: {
        DefId(0): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Real(0.0)


